fixed duplicate links, fixed contrast of links

--- a/app/resources/styles/sass/app.scss
+++ b/app/resources/styles/sass/app.scss
@@ -21,6 +21,10 @@ main footer {
   margin-bottom: 75px;
 }
 
+a {
+  color: $primary;
+}
+
 .appContent {
   padding-top: 25px;
 }
